Adjust contrast of issue titles (#120)
- creates a new non-transparent 'grey' color #808080
- sets issue list page and detail page to use this color for issue titles

--- a/themes/startwords/assets/scss/issue/_list.scss
+++ b/themes/startwords/assets/scss/issue/_list.scss
@@ -18,7 +18,7 @@ body.issue-list {
             font-size: rem(60px);
             word-wrap: break-word;
             margin: rem(10px) 0 0;
-            color: $transparent-grey;
+            color: $grey;
             line-height: rem(50px);
 
             // scaled width
