--- a/themes/startwords/assets/scss/issue/_summary.scss
+++ b/themes/startwords/assets/scss/issue/_summary.scss
@@ -8,7 +8,7 @@
 
     @media (min-width: $breakpoint-m) { font-size: rem(20px); }
 
-    .theme { color: $transparent-grey; }
+    .theme { color: $grey; }
 
     &.inverted,
     .inverted & {
